generated-tests/tests/snapshots/ts/generated_tests__typescript__test_generated_conditional_type.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
type Test<T> = T extends string ? number : boolean; const value5: Test<string> = 42;

AST:
(program
  (type_alias_declaration
    (type_identifier)
    (type_parameters
      (type_parameter
        (type_identifier)
      )
    )
    (conditional_type
      (type_identifier)
      (predefined_type)
      (predefined_type)
      (predefined_type)
    )
  )
  (lexical_declaration
    (variable_declarator
      (identifier value5)
      (type_annotation
        (generic_type
          (type_identifier)
          (type_arguments
            (predefined_type)
          )
        )
      )
      (number)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "Test",
            line_number: 1,
            definition_type: TypeDefinition,
            scope: None,
        },
        Definition {
            name: "value5",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "value5",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 59,
            end_line: 1,
            end_column: 65,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
