generated-tests/tests/snapshots/ts/generated_tests__typescript__test_generated_continue_statement.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
for (let i = 0; i < 10; i++) { continue; }

AST:
(program
  (for_statement
    (lexical_declaration
      (variable_declarator
        (identifier i)
        (number)
      )
    )
    (expression_statement
      (binary_expression
        (identifier i)
        (number)
      )
    )
    (update_expression
      (identifier i)
    )
    (statement_block
      (continue_statement)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "i",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
