generated-tests/tests/snapshots/ts/generated_tests__typescript__test_generated_do_statement.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
let i = 0; do { i++; } while (i < 5);

AST:
(program
  (lexical_declaration
    (variable_declarator
      (identifier i)
      (number)
    )
  )
  (do_statement
    (statement_block
      (expression_statement
        (update_expression
          (identifier i)
        )
      )
    )
    (parenthesized_expression
      (binary_expression
        (identifier i)
        (number)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "i",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "i",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 5,
            end_line: 1,
            end_column: 6,
        },
        SerializableUsage {
            name: "i",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 17,
            end_line: 1,
            end_column: 18,
        },
        SerializableUsage {
            name: "i",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 31,
            end_line: 1,
            end_column: 32,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
