generated-tests/tests/snapshots/ts/generated_tests__typescript__test_generated_generator_function_declaration.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
function* testFn2() { yield value9; }

AST:
(program
  (generator_function_declaration
    (identifier testFn2)
    (formal_parameters)
    (statement_block
      (expression_statement
        (yield_expression
          (identifier value9)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
